--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # Spring DB Configurations
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:booking
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb_spring?useSSL=false
+spring.datasource.username=root
 spring.datasource.password=
+
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 
 # Security Properties
-testament.app.jwtSecret= ======================Testament-lia-future=Spring===========================
+testament.app.jwtSecret= ======================Testament==lia==future=Spring===========================
 testament.app.jwtExpirationMs=86400000
